# emergent_v2

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_entropy.ipynb  01_entropy_mc.ipynb  02_chsh_tsirelson.ipynb  03_geom_fp.ipynb  03_lorentz_flatness.ipynb  04_einstein_fp.ipynb  04_einstein_limit.ipynb  05_rg_window.ipynb  06_extremum_qR.ipynb  07_entropy_max.ipynb  07_forward_predictions.ipynb  07_prediction_cards.ipynb  README.md
scripts/: emergent_fp.py  rebuild_notebooks.py
src/emergent/: born.py  calibration.py  chsh.py  cli.py  cli_entropy_max.py  cli_predict.py  constants.py  entropy.py  entropy_fp.py  entropy_max.py  entropy_mc.py  extremum.py  gauge.py  geom.py  geom_fp.py  gravity.py  gravity_fp.py  logging.py  measure.py  metric.py  physics_maps.py  poset.py  predict.py  random.py  rg.py  spectral.py  test_setup.py  types.py  update.py
src/emergent/paper_maps/: v8.py
tests/: conftest.py  test_born.py  test_calibration.py  test_chsh.py  test_cli.py  test_entropy.py  test_entropy_fp.py  test_entropy_max.py  test_entropy_mc.py  test_extremum.py  test_gauge.py  test_geom.py  test_geom_fp.py  test_gravity.py  test_gravity_fp.py  test_integration.py  test_measure.py  test_metric.py  test_poset.py  test_predict.py  test_properties.py  test_rg.py  test_spectral.py  test_update.py
