# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent"
version = "0.1.0"
description = "Deterministic causal-site numerics: setup, constants, and RNG (M00)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Research Engineering Plan", email = "noreply@example.com"}]
dependencies = [
  "numpy>=2.1,<3",
  "scipy>=1.14,<2",
  "networkx>=3.2",
  "numba>=0.59",
  "matplotlib>=3.8",
  "pytest>=8.0",
  "hypothesis>=6.100",
  "typer[all]",
  "rich",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
emergent = "emergent.cli:app"

# For development dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    # "hypothesis", # if you add property-based tests
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
pythonpath = ["src"]

[tool.black]
line-length = 100